# alt-eval

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/alt_eval/: __init__.py  error_visualizer.py  metrics.py  normalization.py  tokenizer.py
src/jam_alt/: metrics.py  tokenizer.py
tests/: test_tokenizer.py
