[project]
name = "alt-eval"
authors = [
    {name = "Ondřej Cífka"},
]
description = "Automatic lyrics transcription evaluation toolkit"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "jiwer>=3.0.3",
    "python-iso639>=2023.6.15",
    "regex>=2023.8.8",
    "sacremoses>=0.0.53",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
force_sort_within_sections = true
use_parentheses = true
line_length = 100

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
